third_party/move/move-prover/tests/sources/functional/state_labels/frame_conditions.exp
Move prover returns: exiting with verification errors
error: function does not abort under this condition
    ┌─ tests/sources/functional/state_labels/frame_conditions.move:155:9
    │
155 │         aborts_if true; // error: abort not covered by aborts_if
    │         ^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/state_labels/frame_conditions.move:148: test_aborts_of_wrong
    =         addr = <redacted>
    =     at tests/sources/functional/state_labels/frame_conditions.move:149: test_aborts_of_wrong
    =         result = <redacted>
    =     at tests/sources/functional/state_labels/frame_conditions.move:153: test_aborts_of_wrong
    =     at tests/sources/functional/state_labels/frame_conditions.move:155: test_aborts_of_wrong (spec)

error: post-condition does not hold
    ┌─ tests/sources/functional/state_labels/frame_conditions.move:171:9
    │
171 │         ensures result == Counter[addr].value + 1; // error: post-condition does not hold
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/state_labels/frame_conditions.move:163: test_reads_frame_wrong_result
    =         addr = <redacted>
    =     at tests/sources/functional/state_labels/frame_conditions.move:164: test_reads_frame_wrong_result
    =         result = <redacted>
    =     at tests/sources/functional/state_labels/frame_conditions.move:168: test_reads_frame_wrong_result
    =     at tests/sources/functional/state_labels/frame_conditions.move:171: test_reads_frame_wrong_result (spec)
